@@ -5,6 +5,9 @@ Date: 2022-08-09
     - New optional intermediate: CuW composite. Replaces tungsten plate in some recipes.
     - A few basic recipe tweaks for 248k
   Changes:
+    - General balance: Tungsten plates required for piercing ammunition reduced.
+    - General balance: Tungsten ingredients required for oil refinery & chemical plant increased.
+    - General balance: For some mod loadouts, steel no longer required for assembling machine 2
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.6
 Date: 2021-08-02
